package fis.dsw.sgc.check_in.model;

public enum EstadoAlerta {
    ENVIADA,
    RECIBIDA,
    ATENDIDA,
    CANCELADA,
    ABIERTA,
    EN_ATENCION,
    RESUELTA,
    CERRADA
}
