package fis.dsw.sgc.check_in.model;

public enum EstadoVisita {
    PROGRAMADA,
    EN_CURSO,
    FINALIZADA,
    CANCELADA
}
