package fis.dsw.sgc.check_in.model;

public enum PrioridadAlerta {
    BAJA,
    MEDIA,
    ALTA,
    CRITICA
}
