package fis.dsw.sgc.comunicacion.dto;
public record NotificacionDTO(long id, String fecha, String tipo, String destinatario, String asunto, String estado) {}
